// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Converts Button to LinkButton if it has href prop 1`] = `
"import { LinkButton, Button } from "@react/experimental-s2";

<div>
  <Button>Test</Button>
  <LinkButton href="/">Test</LinkButton>
</div>"
`;

exports[`Comments out isPending 1`] = `
"import { Button } from "@react/experimental-s2";

<div>
  // TODO(S2-upgrade): isPending has not been implemented yet.
  <Button>Test</Button>
  // TODO(S2-upgrade): isPending has not been implemented yet.
  <Button>Test</Button>
</div>"
`;

exports[`Renames variants 1`] = `
"import { Button } from "@react/experimental-s2";

<div>
  <Button variant="accent">Test</Button>
  <Button variant="primary" staticColor="white">Test</Button>
</div>"
`;
